fix merge Conflict

--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
     <title>Hello!</title>
   </head>
   <body>
-<<<<<<< HEAD
-      <h1>Welcom to my website!!</h1>
-=======
-      <h1 style="color: blue">Welcom to my website!</h1>
->>>>>>> refs/remotes/origin/master
+      <h1 style="color: blue">Welcom to my website!!</h1>
     <h2>Ballus</h2>
     Hello bro!
     </body>
